# temporal-ocaml

./: .gitignore  LICENSE  Makefile  README.md  dune-project  temporal-ocaml.opam
.github/workflows/: ci.yml  release.yml
docs/: writing-style.md
docs/adr/: 0000-record-architecture-decisions.md  0001-payload-codecs.md  0002-signals-and-queries.md  0003-child-workflows.md  0004-cancellation-and-concurrency.md
docs/plans/: 0004-cancellation-and-concurrency.md
examples/ecommerce/: activities.ml  dune  main.ml  model.ml  workflows.ml
lib/: activity.ml  client.ml  codec.ml  coresdk.ml  dune  pb.ml  query.ml  signal.ml  stubs.c  temporal.ml  temporal.mli  update.ml  worker.ml  workflow.ml
lib/ffi/: temporal_ffi.ml  temporal_ffi.mli
lib/worker/: replay.ml  replay_state.ml
rust/temporal_bridge/: Cargo.toml
rust/temporal_bridge/include/: temporal_bridge.h
rust/temporal_bridge/src/: lib.rs
scripts/: build-bridge.sh  livetest.sh
test/: dune  replay_test.ml  test_codec.ml
